# paoo-hws

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  genericitem.hpp  hiker.cpp  hiker.hpp  identity.hpp  ihiker.hpp  main.cpp
src/equipment_management/: CMakeLists.txt  equipment.cpp  equipment.hpp
src/hiker_management/: CMakeLists.txt  hiker.cpp  hiker.hpp  ihiker.hpp
src/identity_management/: CMakeLists.txt  NamedValue.hpp  identity.cpp  identity.hpp  utility.hpp
